--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
 @tailwind utilities;
 
 body{
-font-family: "Manrope", system-ui;
-background-color: #EEE5FF;
+    font-family: "Manrope", system-ui;
+    background-color: #EEE5FF;
+}
+
+/* FOOTER */
+
+.footer {
+    @apply bg-white py-5 text-center
+}
+
+.footer h2 {
+    @apply font-medium text-lg
 }
