--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,30 @@ body{
     background-color: #EEE5FF;
 }
 
+/* HEADER */
+
+.header {
+    @apply py-4 flex items-center justify-between
+}
+
+.header .logo {
+    @apply w-14
+}
+
+.header ul {
+    @apply flex bg-primary bg-opacity-20 rounded-full
+}
+
+.header ul li a {
+    @apply font-semibold text-lg py-2 px-4
+}
+
+.header ul li .active {
+    @apply text-white bg-primary rounded-full
+}
+
+
+
 /* FOOTER */
 
 .footer {
