--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ button {
 }
 
 .ham_container {
-    @apply absolute left-0 top-16 w-full border-t-2 z-10 transition-all duration-500 bg-white py-5 h-full min-h-screen
+    @apply absolute left-0 top-16 md:top-20 w-full border-t-2 z-10 transition-all duration-700 bg-white py-5 h-full min-h-screen
 }
 
 .ham_menu_item {
@@ -56,7 +56,7 @@ button {
 /* BANNER */
 
 .banner {
-    @apply text-center py-10 md:py-24 space-y-8 
+    @apply text-center pb-14 pt-24 md:py-24 space-y-8 
 }
 
 .banner .badge {
@@ -86,7 +86,7 @@ button {
 }
 
 .scroll_container {
-    @apply flex gap-2 justify-center items-center mt-10 md:mt-32
+    @apply flex gap-2 justify-center items-center mt-32
 }
 
 .scroll_container img {
@@ -97,27 +97,35 @@ button {
 /* PRODUCTS PAGE */
 
 .cat_card {
-    @apply bg-third bg-opacity-25 p-5 rounded-3xl cursor-pointer hover:bg-opacity-50 transition-all space-y-3
+    @apply bg-third bg-opacity-25 p-3 md:p-5 rounded-3xl cursor-pointer hover:bg-opacity-50 transition-all space-y-3
 }
 
 .cat_card img {
-    @apply w-10 h-10 mx-auto
+    @apply w-8 md:w-10 h-8 md:h-10 mx-auto
+}
+
+.cat_card h3{
+    @apply font-bold text-sm md:text-base
 }
 
 .my_tab {
-    @apply bg-third bg-opacity-35 flex items-center rounded-full mt-10
+    @apply bg-third bg-opacity-35 flex items-center rounded-full mt-5 md:mt-10
 }
 
 .my_tab div {
-    @apply px-3 py-2 font-semibold capitalize rounded-full cursor-pointer
+    @apply px-2 md:px-3 py-1 md:py-2 font-semibold capitalize rounded-full cursor-pointer
 }
 
 .search {
-    @apply flex bg-white bg-opacity-60 rounded-full
+    @apply flex bg-white bg-opacity-60 rounded-full !w-full lg:!w-auto
 }
 
 .search input {
-    @apply rounded-full focus:outline-none py-2 px-3
+    @apply rounded-full focus:outline-none py-2 px-3 w-full lg:w-auto
+}
+
+.no_product {
+    @apply text-center font-semibold text-2xl md:text-3xl col-span-6 py-10 md:py-20
 }
 
 
@@ -126,7 +134,11 @@ button {
 /* Card Red Badge */
 
 .red_badge{
-    @apply bg-red-500 bg-opacity-20 text-red-600 font-bold py-1.5 px-3 rounded-full
+    @apply bg-red-500 bg-opacity-20 text-red-600 text-sm md:text-base font-semibold md:font-bold py-1 md:py-1.5 px-2 md:px-3 rounded-full
+}
+
+.red_badge{
+    @apply bg-green-500 bg-opacity-20 text-green-600 text-sm md:text-base font-semibold md:font-bold py-1 md:py-1.5 px-2 md:px-3 rounded-full
 }
 
 
@@ -137,7 +149,7 @@ button {
 }
 
 .footer h2 {
-    @apply font-medium text-lg
+    @apply font-medium text-base md:text-lg
 }
 
 
